--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.13.11",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "googleapis": "^152.0.0",
+    "multer": "^2.0.1",
     "ws": "^8.18.3"
   }
 }
